test/domains/compilerErrors/notsupportedOpCount-sparse.chpl

var dfltRectangularSparseSub: sparse subdomain(LocaleSpace);
writeln(dfltRectangularSparseSub # 1);
